--- a/index.html
+++ b/index.html
@@ -305,27 +305,15 @@
         <div class="content">
           <h1 class="title is-5 has-text-weight-semibold has-text-black">About me</h1>
           <p class="has-text-black">
-            I work across teams to discover, define, and refine user experiences and streamline processes, advocating
-            for key needs
-            of the users. innovative solutions, and understanding technical requirements and scopes. I use quick
-            visualization and
-            pixel-perfect prototyping to better understand workflows and test new concepts and ideas.
-
-            I've built various easy-to-use, no-code systems, from WordPress, WooCommerce, Shopify, Squarespace, Webflow,
-            Webstudio,
-            integrating Sendgrid, and Mailchimp. Using HTML, CSS, and other functionalities to solve various needs.
-
-            For three years, I've worked independently in my design studio, helping clients address their needs. This
-            experience
-            taught me to pay attention to real needs, look deeper, and truly understand them and their users to create
-            positive
-            outcomes.
-
-            My passion is to understand life and human interaction through design, and that is what drives me in my way
-            to improve
-            people's experiences.
+              My work is all about understanding users and collaborating with teams to identify, define, and improve their experiences. I love streamlining processes and making them smarter, always aiming to balance innovative solutions with technical realities and limitations.
+            </p>
+            <p class="pt-1">
+              As a Product Designer, I thrive on bridging the gap between development teams, non-technical teams, and users. I map out their needs and guide them towards more creative solutions. I'm skilled at quick visualization and pixel-perfect prototyping, which helps me understand workflows and test new ideas quickly. My knowledge of HTML, CSS, and some frameworks adds versatility to my toolkit.
+            </p>
+            <p class="pt-1">
+              For over three years, I ran my own design agency, which was a transformative experience. It sharpened my design skills and offered a better understanding of client needs, leading to many meaningful and positive outcomes. This journey was both challenging and incredibly rewarding.
           </p>
-          <a class="button is-small is-light" href="project_jumble.html">Read CV</a>
+          <a class="button is-small is-light" href="#">Read CV</a>
         </div>
       </div>
     </div>
