--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <p class="pt-1">
               For over three years, I ran my own design agency, which was a transformative experience. It sharpened my design skills and offered a better understanding of client needs, leading to many meaningful and positive outcomes. This journey was both challenging and incredibly rewarding.
           </p>
-          <a class="button is-small is-light" href="#">Read CV</a>
+          <a class="button is-small is-light" href="media/Raúl_Martín_Parra-CV_24.docx">Read CV</a>
         </div>
       </div>
     </div>
