--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <p class="image is-square">
             <img
               class="is-border-hard"
-              src="media/raul-foto.jpg"
+              src="media/raul-martin-parra.jpeg"
             />
           </p>
         </figure>
