--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="level-left">
       <div class="navbar-brand">
         <div class="navbar-item px-0 is-align-items-start is-flex-direction-column">
-          <a href="index.html" class="is-clickable">
+          <a href="/" class="is-clickable">
             <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
           </a>
           <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
