--- a/project_weather.html
+++ b/project_weather.html
@@ -7,7 +7,12 @@
     name="viewport"
     content="width=device-width, initial-scale=1"
   >
-  <title>Jumble - Raúl Martín Parra - Product Design / CX / Design</title>
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  
+  <title>My Weather - Raúl Martín Parra - Product Design / CX / Design</title>
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"
@@ -30,6 +35,7 @@
     href="portfolio.css"
   >
   <script src="https://kit.fontawesome.com/d68454b009.js" crossorigin="anonymous"></script>
+  
 </head>
 
 <body class="container is-ibm-plex-mono-regular mobile-margins">
@@ -38,7 +44,7 @@
     <div class="level-left">
       <div class="navbar-brand">
         <div class="navbar-item px-0 is-align-items-start is-flex-direction-column">
-          <a href="index.html" class="is-clickable">
+          <a href="/" class="is-clickable">
             <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
           </a>
           <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
