--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
           <p class="has-text-black">
               My work is all about understanding users and collaborating with teams to identify, define, and improve their experiences. I love streamlining processes and making them smarter, always aiming to balance innovative solutions with technical realities and limitations.
             </p>
-            <p class="pt-1">
+            <p class="pt-1 has-text-black">
               As a Product Designer, I thrive on bridging the gap between development teams, non-technical teams, and users. I map out their needs and guide them towards more creative solutions. I'm skilled at quick visualization and pixel-perfect prototyping, which helps me understand workflows and test new ideas quickly. My knowledge of HTML, CSS, and some frameworks adds versatility to my toolkit.
             </p>
-            <p class="pt-1">
+            <p class="pt-1 has-text-black">
               For over three years, I ran my own design agency, which was a transformative experience. It sharpened my design skills and offered a better understanding of client needs, leading to many meaningful and positive outcomes. This journey was both challenging and incredibly rewarding.
           </p>
           <a class="button is-small is-light" href="https://docs.google.com/document/d/1ghzGvn2FWMFp8uJ_jmoht1_qBZS4zuasnH8dxBtCp80/edit?usp=sharing" target=”_blank >Read CV</a>
