--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="/" class="is-clickable">
             <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
           </a>
-          <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
+          <p class="subtitle has-text-black is-6 has-text-weight-light">parramartinraul@gmail.com</p>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
             </span>
           </button>
         </a>
-        <a class="control" href="mailto:contact@raulmartin.work?cc=parramartinraul@gmail.com" target=”_blank”>
+        <a class="control" href="mailto:parramartinraul@gmail.com" target=”_blank”>
           <button class="button is-black is-outlined is-normal">
             <span>Get in touch</span>
           </button>
