--- a/index-v2.html
+++ b/index-v2.html
@@ -93,18 +93,18 @@
         <div class="card is-shadowless">
             <div class="card-image">
                 <figure class="image is-square">
-                    <img src="media/polestar-cover.jpg" class="is-border-hard" alt="Polestar Future Scenarios cover image">
+                    <img src="media/polestar-cover.jpg" class="is-border-hard" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content px-0">
-                <h3>Polestar Future Scenarios</h3>
+                <div class="title is-5 has-text-weight-semibold has-text-black">Polestar Future Scenarios</div>
                 <div class="content is-body-text has-text-black">
-                    <p>Exploring future mobility scenarios and their impact on user experience design.</p>
+                    Exploring future mobility scenarios and their impact on user experience design.
                     <a href="project_polestar.html" class="button is-small is-light">Read more</a>
                 </div>
             </div>
         </div>
-    </div>  
+      </div>  
       <div class="cell">
         <div class="card is-shadowless">
           <div class="card-image">
