--- a/index-v2.html
+++ b/index-v2.html
@@ -91,20 +91,24 @@
     <div class="grid is-gap-6">
       <div class="cell">
         <div class="card is-shadowless">
-            <div class="card-image">
-                <figure class="image is-square">
-                    <img src="media/polestar-cover.jpg" class="is-border-hard" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content px-0">
-                <div class="title is-5 has-text-weight-semibold has-text-black">Polestar Future Scenarios</div>
-                <div class="content is-body-text has-text-black">
-                    Exploring future mobility scenarios and their impact on user experience design.
-                    <a href="project_polestar.html" class="button is-small is-light">Read more</a>
-                </div>
-            </div>
+        <div class="card-image">
+        <figure class="image is-square">
+        <img
+       class="is-border-hard"
+       src="media/polestar-cover.jpg"
+       alt="Placeholder image"
+        />
+        </figure>
         </div>
-      </div>  
+        <div class="card-content px-0">
+        <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Polestar Future Scenarios</p>
+        <div class="content is-body-text has-text-black">
+        <p>Exploring future mobility scenarios and their impact on user experience design.</p>
+        <a class="button is-small is-light" href="project_polestar.html">Read more</a>
+        </div>
+        </div>
+        </div>
+        </div> 
       <div class="cell">
         <div class="card is-shadowless">
           <div class="card-image">
