--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -86,18 +86,20 @@
         </div>
         <p class="is-size-5 has-text-black">
           We created Jumble to solve the core challenge facing remote development teams: facilitating effective pair programming sessions. The platform enables developers to easily create, discover, and join programming sessions based on specific topics and challenges.
-          
+        </p>
+          <p class="is-size-5 has-text-black pb-5">  
           I led product design and frontend development from concept to launch, crafting an intuitive interface that emphasized discoverability and ease of use.
-          
+          </p>
+          <p class="is-size-5 has-text-black pb-5"> 
           The MVP successfully launched with a focused feature set that addressed our users' core needs, onboarding 100 active users who could immediately start creating and joining programming sessions.
+          </p>
             <article class="message">
              <div class="message-body">
-              <strong>Timeline:</strong> 1.5 months
-              <strong>Role:</strong> Product Design, Frontend Development, User Research
-                <strong>Impact:</strong> 100 initial users, validated core user flows
+              <strong>Timeline:</strong> 1.5 months </br>
+              <strong>Role:</strong> Product Design, Frontend Development, User Research</br>
+                <strong>Impact:</strong> 100 initial users, validated core user flows</br>
              </div>
             </article>
-        </p>
 
       </div>
     </div>
