--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -75,7 +75,8 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span></div>
+      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span>
+      </div>
       <div class="column">
         <div class="tags mt-5">
           <span class="tag is-category-tag is-rounded">MVP</span>
@@ -87,20 +88,19 @@
         <p class="is-size-5 has-text-black">
           We created Jumble to solve the core challenge facing remote development teams: facilitating effective pair programming sessions. The platform enables developers to easily create, discover, and join programming sessions based on specific topics and challenges.
         </p>
-          <p class="is-size-5 has-text-black pb-5">  
+        <p class="is-size-5 has-text-black pb-5">  
           I led product design and frontend development from concept to launch, crafting an intuitive interface that emphasized discoverability and ease of use.
-          </p>
-          <p class="is-size-5 has-text-black pb-5"> 
+        </p>
+        <p class="is-size-5 has-text-black pb-5"> 
           The MVP successfully launched with a focused feature set that addressed our users' core needs, onboarding 100 active users who could immediately start creating and joining programming sessions.
-          </p>
-            <article class="message">
-             <div class="message-body">
-              <strong>Timeline:</strong> 1.5 months </br>
-              <strong>Role:</strong> Product Design, Frontend Development, User Research</br>
-                <strong>Impact:</strong> 100 initial users, validated core user flows</br>
-             </div>
-            </article>
-
+        </p>
+          <article class="message">
+            <div class="message-body">
+            <strong>Timeline:</strong> 1.5 months </br>
+            <strong>Role:</strong> Product Design, Frontend Development, User Research</br>
+              <strong>Impact:</strong> 100 initial users, validated core user flows</br>
+            </div>
+          </article>
       </div>
     </div>
   </section>
