--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -85,19 +85,18 @@
           <span class="tag is-category-tag is-rounded">UX/UI</span>
           <span class="tag is-category-tag is-rounded">BRANDING</span>
         </div>
-        <p class="is-size-5 has-text-black">
-          We created Jumble to solve the core challenge facing remote development teams: facilitating effective pair programming sessions. The platform enables developers to easily create, discover, and join programming sessions based on specific topics and challenges.
-        </p>
-        <p class="is-size-5 has-text-black pb-5">  
-          I led product design and frontend development from concept to launch, crafting an intuitive interface that emphasized discoverability and ease of use.
-        </p>
+        <p class="is-size-5 has-text-black pb-5">
+          We embarked to create Jumble in order help development teams maintain effective pair programming practices in remote settings. The platform enables developers to easily find programming partners and collaborate in real-time, addressing the growing challenge of knowledge sharing in distributed teams.
+        </p> 
+        <p class="is-size-5 has-text-black pb-5">
+          During this journey, I led product design and frontend development from concept to launch, while helping shape the product strategy through user research and market analysis.
         <p class="is-size-5 has-text-black pb-5"> 
-          The MVP successfully launched with a focused feature set that addressed our users' core needs, onboarding 100 active users who could immediately start creating and joining programming sessions.
+          The MVP successfully launched with a focused feature set that addressed our ideal users' core needs. During a period of a monthn 100 active users were able to start hosting and joining programming sessions.
         </p>
           <article class="message">
             <div class="message-body">
-            <strong>Timeline:</strong> 1.5 months </br>
-            <strong>Role:</strong> Product Design, Frontend Development, User Research</br>
+              <strong>Timeline:</strong> 1.5 months </br>
+              <strong>Skills:</strong> UX/UI Design, Front-end Development, Market Research, User Interviews</br>
               <strong>Impact:</strong> 100 initial users, validated core user flows</br>
             </div>
           </article>
@@ -114,11 +113,24 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
+      <div class="column is-two-fifths">
+        <div class="tags mt-5">
+          <span class="tag is-category-tag is-rounded">DISCOVERY</span>
+        </div>
+      </div>
       <div class="column has-text-black">
-        <p>
-          We wanted to address common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+        <p class="is-size-5 has-text-black pb-5">
+          Through our research, we found that remote teams weren't struggling with the actual pair programming - they were struggling with everything around it: finding the right partner, scheduling sessions, and organizing around specific topics or problems.
         </p>
+        <p class="is-size-5 has-text-black pb-5">
+          Our research also revealed that some remote development teams were struggling to maintain collaborative coding practices. Through user interviews and market analysis, we identified that while teams valued pair programming, the logistics of organizing sessions remotely was a significant barrier to adoption.
+        </p>
+          <blockquote>
+            "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer
+          </blockquote>
+          <p class="is-size-5 has-text-black pb-5">
+          Other common issues that we found: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          </p>
       </div>
     </div>
   </section>
