--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -118,7 +118,7 @@
           <span class="tag is-category-tag is-rounded">DISCOVERY</span>
         </div>
       </div>
-      <div class="column has-text-black">
+      <div class="column has-text-black content">
         <p class="is-size-5 has-text-black pb-5">
           Through our research, we found that remote teams weren't struggling with the actual pair programming - they were struggling with everything around it: finding the right partner, scheduling sessions, and organizing around specific topics or problems.
         </p>
