--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -75,7 +75,17 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span>
+      <div class="column is-two-fifths">
+        <span class="is-size-3 has-text-weight-semibold has-text-black">
+          Jumble
+        </span>
+        <article class="message">
+          <div class="message-body">
+            <strong>Timeline:</strong> 1.5 months </br>
+            <strong>Skills:</strong> UX/UI Design, Front-end Development, Market Research, User Interviews</br>
+            <strong>Impact:</strong> 100 initial users, validated core user flows</br>
+          </div>
+        </article>
       </div>
       <div class="column">
         <div class="tags mt-5">
