--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -124,8 +124,8 @@
   <section class="section px-0">
     <div class="columns">
       <div class="column is-two-fifths">
-        <div class="tags mt-5">
-          <span class="tag is-category-tag is-rounded">DISCOVERY</span>
+        <div class="tags">
+          <span class="tag is-skill-tag is-rounded">DISCOVERY</span>
         </div>
       </div>
       <div class="column has-text-black content">
