--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -125,7 +125,7 @@
     <div class="columns">
       <div class="column is-two-fifths">
         <div class="tags">
-          <span class="tag is-skill-tag is-rounded">DISCOVERY</span>
+          <span class="is-rounded is-black is-outlined is-tag is-border-thin is-skill-tag">DISCOVERY</span>
         </div>
       </div>
       <div class="column has-text-black content">
