--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -124,9 +124,10 @@
   <section class="section px-0">
     <div class="columns">
       <div class="column is-two-fifths">
-        <div class="tags">
-          <span class="is-rounded is-black is-outlined is-tag is-border-thin is-skill-tag">DISCOVERY</span>
+        <div class="buttons are-large">
+          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-skill-tag"> DISCOVERY</span>
         </div>
+      </section>
       </div>
       <div class="column has-text-black content">
         <p class="is-size-5 has-text-black pb-5">
