--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -79,13 +79,6 @@
         <span class="is-size-3 has-text-weight-semibold has-text-black">
           Jumble
         </span>
-        <article class="message">
-          <div class="message-body">
-            <strong>Timeline:</strong> 1.5 months </br>
-            <strong>Skills:</strong> UX/UI Design, Front-end Development, Market Research, User Interviews</br>
-            <strong>Impact:</strong> 100 initial users, validated core user flows</br>
-          </div>
-        </article>
       </div>
       <div class="column">
         <div class="tags mt-5">
@@ -103,10 +96,17 @@
         <p class="is-size-5 has-text-black pb-5"> 
           The MVP successfully launched with a focused feature set that addressed our ideal users' core needs. During a period of a monthn 100 active users were able to start hosting and joining programming sessions.
         </p>
-          <article class="message">
+          <article class="message is-dark">
             <div class="message-body">
               <strong>Timeline:</strong> 1.5 months </br>
-              <strong>Skills:</strong> UX/UI Design, Front-end Development, Market Research, User Interviews</br>
+              <strong>Skills:</strong>
+                <div class="tags mt-5">
+                  <span class="tag is-category-tag is-rounded">MVP</span>
+                  <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
+                  <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
+                  <span class="tag is-category-tag is-rounded">UX/UI</span>
+                  <span class="tag is-category-tag is-rounded">BRANDING</span>
+                </div></br>
               <strong>Impact:</strong> 100 initial users, validated core user flows</br>
             </div>
           </article>
