--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -99,14 +99,15 @@
           <article class="message is-dark">
             <div class="message-body">
               <strong>Timeline:</strong> 1.5 months </br>
-              <strong>Skills:</strong>
-                <div class="tags mt-5">
+              <span><strong>Skills:</strong>
+                <div class="tags">
                   <span class="tag is-category-tag is-rounded">MVP</span>
                   <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
                   <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
                   <span class="tag is-category-tag is-rounded">UX/UI</span>
                   <span class="tag is-category-tag is-rounded">BRANDING</span>
-                </div></br>
+                </div>
+              </span></br>
               <strong>Impact:</strong> 100 initial users, validated core user flows</br>
             </div>
           </article>
