--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -81,13 +81,6 @@
         </span>
       </div>
       <div class="column">
-        <div class="tags mt-5">
-          <span class="tag is-category-tag is-rounded">MVP</span>
-          <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
-          <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
-          <span class="tag is-category-tag is-rounded">UX/UI</span>
-          <span class="tag is-category-tag is-rounded">BRANDING</span>
-        </div>
         <p class="is-size-5 has-text-black pb-5">
           We embarked to create Jumble in order help development teams maintain effective pair programming practices in remote settings. The platform enables developers to easily find programming partners and collaborate in real-time, addressing the growing challenge of knowledge sharing in distributed teams.
         </p> 
@@ -99,15 +92,7 @@
           <article class="message is-dark">
             <div class="message-body">
               <strong>Timeline:</strong> 1.5 months </br>
-              <span><strong>Skills:</strong>
-                <div class="tags">
-                  <span class="tag is-category-tag is-rounded">MVP</span>
-                  <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
-                  <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
-                  <span class="tag is-category-tag is-rounded">UX/UI</span>
-                  <span class="tag is-category-tag is-rounded">BRANDING</span>
-                </div>
-              </span></br>
+              <strong>Skills:</strong> Product Design, Frontend Development, User Research, Branding</span></br>
               <strong>Impact:</strong> 100 initial users, validated core user flows</br>
             </div>
           </article>
@@ -133,15 +118,24 @@
         <p class="is-size-5 has-text-black pb-5">
           Through our research, we found that remote teams weren't struggling with the actual pair programming - they were struggling with everything around it: finding the right partner, scheduling sessions, and organizing around specific topics or problems.
         </p>
-        <p class="is-size-5 has-text-black pb-5">
+        <p class="is-size-5 has-text-black">
           Our research also revealed that some remote development teams were struggling to maintain collaborative coding practices. Through user interviews and market analysis, we identified that while teams valued pair programming, the logistics of organizing sessions remotely was a significant barrier to adoption.
         </p>
           <blockquote>
             "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer
           </blockquote>
-          <p class="is-size-5 has-text-black pb-5">
-          Other common issues that we found: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          <blockquote>
+            "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work." - Tech Lead
+          </blockquote>
+          <p class="is-size-5 has-text-black">
+          Other common issues that we found:
           </p>
+          <ul>
+            <li>Employees with varying levels of technical expertise</li>
+            <li>The lack cohesive teamwork</li>
+            <li>Poor communication between teams</li>
+            <li>Critical knowledge being concentrated in a single individual</li>
+          </ul>
       </div>
     </div>
   </section>
