--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="column has-text-black content">
-        <p class="is-size-5 has-text-black pb-5">
+        <p class="is-size-5 has-text-black">
           Through our research, we found that remote teams weren't struggling with the actual pair programming - they were struggling with everything around it: finding the right partner, scheduling sessions, and organizing around specific topics or problems.
         </p>
         <p class="is-size-5 has-text-black">
