--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -81,18 +81,21 @@
         </span>
       </div>
       <div class="column">
+        <span class="is-size-4 has-text-weight-semibold has-text-black">
+          Overview
+        </span>
         <p class="is-size-5 has-text-black pb-5">
-          We embarked to create Jumble in order help development teams maintain effective pair programming practices in remote settings. The platform enables developers to easily find programming partners and collaborate in real-time, addressing the growing challenge of knowledge sharing in distributed teams.
+          We created Jumble to solve the core challenge facing remote development teams: facilitating effective pair programming sessions. <strong>The platform enables developers to easily create, discover, and join programming sessions based on specific topics and challenges.</strong> 
         </p> 
         <p class="is-size-5 has-text-black pb-5">
           During this journey, I led product design and frontend development from concept to launch, while helping shape the product strategy through user research and market analysis.
         <p class="is-size-5 has-text-black pb-5"> 
-          The MVP successfully launched with a focused feature set that addressed our ideal users' core needs. During a period of a monthn 100 active users were able to start hosting and joining programming sessions.
+          The MVP successfully launched addressing our core ideal users. During a period of a month, little over 100 users were able to host and join programming sessions.
         </p>
           <article class="message is-dark">
             <div class="message-body">
               <strong>Timeline:</strong> 1.5 months </br>
-              <strong>Skills:</strong> Product Design, Frontend Development, User Research, Branding</span></br>
+              <strong>Role:</strong> Product Design, Frontend, User Research, UX/UI, Branding</span></br>
               <strong>Impact:</strong> 100 initial users, validated core user flows</br>
             </div>
           </article>
@@ -115,6 +118,9 @@
         </div>
       </div>
       <div class="column has-text-black content">
+        <span class="is-size-4 has-text-weight-semibold has-text-black">
+          Assumptions, Research and Insights
+        </span>
         <p class="is-size-5 has-text-black">
           Through our research, we found that remote teams weren't struggling with the actual pair programming - they were struggling with everything around it: finding the right partner, scheduling sessions, and organizing around specific topics or problems.
         </p>
