--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -85,10 +85,13 @@
           Overview
         </span>
         <p class="is-size-5 has-text-black pb-5">
-          We created Jumble to solve the core challenge facing remote development teams: facilitating effective pair programming sessions. <strong>The platform enables developers to easily create, discover, and join programming sessions based on specific topics and challenges.</strong> 
+          Remote work was changing how development teams collaborated, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental: <strong> the spontaneous knowledge sharing that naturally happens in an office.</strong>
+        </p>
+        <p class="is-size-5 has-text-black pb-5">
+          We created Jumble to enable effective pair programming sessions by allowing developers to easily create, discover, and join programming sessions based on specific topics and challenges. 
         </p> 
         <p class="is-size-5 has-text-black pb-5">
-          During this journey, I led product design and frontend development from concept to launch, while helping shape the product strategy through user research and market analysis.
+          During this journey, I led product design and frontend development and collaborated in shaping the product strategy through user research and market analysis.
         <p class="is-size-5 has-text-black pb-5"> 
           The MVP successfully launched addressing our core ideal users. During a period of a month, little over 100 users were able to host and join programming sessions.
         </p>
