--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -81,23 +81,22 @@
         </span>
       </div>
       <div class="column">
-        <span class="is-size-4 has-text-weight-semibold has-text-black">
+        <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
           Overview
         </span>
         <p class="is-size-5 has-text-black pb-5">
           Remote work was changing how development teams collaborated, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental: <strong> the spontaneous knowledge sharing that naturally happens in an office.</strong>
         </p>
         <p class="is-size-5 has-text-black pb-5">
-          We created Jumble to enable effective pair programming sessions by allowing developers to easily create, discover, and join programming sessions based on specific topics and challenges. 
+          During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
         </p> 
         <p class="is-size-5 has-text-black pb-5">
           During this journey, I led product design and frontend development and collaborated in shaping the product strategy through user research and market analysis.
-        <p class="is-size-5 has-text-black pb-5"> 
-          The MVP successfully launched addressing our core ideal users. During a period of a month, little over 100 users were able to host and join programming sessions.
         </p>
           <article class="message is-dark">
             <div class="message-body">
-              <strong>Timeline:</strong> 1.5 months </br>
+              <strong>Timeline:</strong> 6 weeks </br>
+              <strong>Team:</strong> 1 developer, 1 product designer</br>
               <strong>Role:</strong> Product Design, Frontend, User Research, UX/UI, Branding</span></br>
               <strong>Impact:</strong> 100 initial users, validated core user flows</br>
             </div>
@@ -121,17 +120,20 @@
         </div>
       </div>
       <div class="column has-text-black content">
-        <span class="is-size-4 has-text-weight-semibold has-text-black">
+        <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
           Assumptions, Research and Insights
         </span>
         <p class="is-size-5 has-text-black">
-          Through our research, we found that remote teams weren't struggling with the actual pair programming - they were struggling with everything around it: finding the right partner, scheduling sessions, and organizing around specific topics or problems.
+          Through user interviews, we discovered teams weren't struggling with the actual pair programming—they were struggling with everything around it:
         </p>
+        <blockquote>
+          "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer at a 200-person startup
+        </blockquote>
         <p class="is-size-5 has-text-black">
           Our research also revealed that some remote development teams were struggling to maintain collaborative coding practices. Through user interviews and market analysis, we identified that while teams valued pair programming, the logistics of organizing sessions remotely was a significant barrier to adoption.
         </p>
           <blockquote>
-            "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer
+            "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer at a 200-person startup
           </blockquote>
           <blockquote>
             "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work." - Tech Lead
