--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -82,25 +82,46 @@
       </div>
       <div class="column">
         <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
-          Overview
+          Context
         </span>
-        <p class="is-size-5 has-text-black pb-5">
-          Remote work was changing how development teams collaborated, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental: <strong> the spontaneous knowledge sharing that naturally happens in an office.</strong>
-        </p>
         <p class="is-size-5 has-text-black pb-5">
           During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
         </p> 
         <p class="is-size-5 has-text-black pb-5">
           During this journey, I led product design and frontend development and collaborated in shaping the product strategy through user research and market analysis.
         </p>
-          <article class="message is-dark">
-            <div class="message-body">
-              <strong>Timeline:</strong> 6 weeks </br>
-              <strong>Team:</strong> 1 developer, 1 product designer</br>
-              <strong>Role:</strong> Product Design, Frontend, User Research, UX/UI, Branding</span></br>
-              <strong>Impact:</strong> 100 initial users, validated core user flows</br>
-            </div>
-          </article>
+        <article class="message is-dark">
+          <div class="message-body">
+            <strong>Timeline:</strong> 6 weeks </br>
+            <strong>Team:</strong> 1 developer, 1 product designer</br>
+            <strong>Role:</strong> Product Design, Frontend, User Research, UX/UI, Branding</span></br>
+            <strong>Impact:</strong> 100 initial users, validated core user flows</br>
+          </div>
+        </article>
+        <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
+          Problem and goal
+        </span>
+        <p class="is-size-5 has-text-black pb-5">
+          Remote work was changing how development teams collaborated, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental: <strong> the spontaneous knowledge sharing that naturally happens in an office.</strong>
+        </p>
+        <p class="is-size-5 has-text-black pb-5">
+          A tech lead at a 200-person startup captured it perfectly:
+        </p>
+        <blockquote>
+          "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work."
+        </blockquote>
+        <p class="is-size-5 has-text-black pb-5">
+          Through early conversations with teams, we identified several critical issues:
+        </p>
+        <ul>
+          <li>Knowledge was becoming siloed in individual team members</li>
+          <li>Junior developers were missing key learning opportunities</li>
+          <li>Teams spent too much time coordinating across time zones</li>
+          <li>The spontaneous "tap on the shoulder" for help was gone</li>
+        </ul>
+        <p class="is-size-5 has-text-black pb-5">
+          Our mission became clear: make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
+        </p>
       </div>
     </div>
   </section>
