--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -80,16 +80,13 @@
           Jumble
         </span>
       </div>
-      <div class="column">
+      <div class="column has-text-black content">
         <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
           Context
         </span>
         <p class="is-size-5 has-text-black pb-5">
           During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
         </p> 
-        <p class="is-size-5 has-text-black pb-5">
-          During this journey, I led product design and frontend development and collaborated in shaping the product strategy through user research and market analysis.
-        </p>
         <article class="message is-dark">
           <div class="message-body">
             <strong>Timeline:</strong> 6 weeks </br>
@@ -103,6 +100,9 @@
         </span>
         <p class="is-size-5 has-text-black pb-5">
           Remote work was changing how development teams collaborated, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental: <strong> the spontaneous knowledge sharing that naturally happens in an office.</strong>
+        </p>
+        <p class="is-size-5 has-text-black pb-5">
+          Our mission became clear: make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
         </p>
         <p class="is-size-5 has-text-black pb-5">
           A tech lead at a 200-person startup captured it perfectly:
@@ -119,9 +119,6 @@
           <li>Teams spent too much time coordinating across time zones</li>
           <li>The spontaneous "tap on the shoulder" for help was gone</li>
         </ul>
-        <p class="is-size-5 has-text-black pb-5">
-          Our mission became clear: make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
-        </p>
       </div>
     </div>
   </section>
@@ -153,21 +150,21 @@
         <p class="is-size-5 has-text-black">
           Our research also revealed that some remote development teams were struggling to maintain collaborative coding practices. Through user interviews and market analysis, we identified that while teams valued pair programming, the logistics of organizing sessions remotely was a significant barrier to adoption.
         </p>
-          <blockquote>
-            "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer at a 200-person startup
-          </blockquote>
-          <blockquote>
-            "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work." - Tech Lead
-          </blockquote>
-          <p class="is-size-5 has-text-black">
-          Other common issues that we found:
-          </p>
-          <ul>
-            <li>Employees with varying levels of technical expertise</li>
-            <li>The lack cohesive teamwork</li>
-            <li>Poor communication between teams</li>
-            <li>Critical knowledge being concentrated in a single individual</li>
-          </ul>
+        <blockquote>
+          "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer at a 200-person startup
+        </blockquote>
+        <blockquote>
+          "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work." - Tech Lead
+        </blockquote>
+        <p class="is-size-5 has-text-black">
+        Other common issues that we found:
+        </p>
+        <ul>
+          <li>Employees with varying levels of technical expertise</li>
+          <li>The lack cohesive teamwork</li>
+          <li>Poor communication between teams</li>
+          <li>Critical knowledge being concentrated in a single individual</li>
+        </ul>
       </div>
     </div>
   </section>
