--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -95,22 +95,19 @@
             <strong>Impact:</strong> 100 initial users, validated core user flows</br>
           </div>
         </article>
-        <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
-          Problem and goal
-        </span>
         <p class="is-size-5 has-text-black pb-5">
-          Remote work was changing how development teams collaborated, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental: <strong> the spontaneous knowledge sharing that naturally happens in an office.</strong>
+          <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, <strong> the spontaneous knowledge sharing that happens in an office.</strong>
         </p>
         <p class="is-size-5 has-text-black pb-5">
-          Our mission became clear: make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
+          <strong>Goal:</strong> make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
         </p>
-        <p class="is-size-5 has-text-black pb-5">
+        <p class="is-size-5 has-text-black">
           A tech lead at a 200-person startup captured it perfectly:
         </p>
         <blockquote>
           "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work."
         </blockquote>
-        <p class="is-size-5 has-text-black pb-5">
+        <p class="is-size-5 has-text-black">
           Through early conversations with teams, we identified several critical issues:
         </p>
         <ul>
