--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -81,10 +81,10 @@
         </span>
       </div>
       <div class="column has-text-black content">
-        <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
+        <span class="is-size-4 has-text-weight-semibold has-text-black">
           Context
         </span>
-        <p class="is-size-5 has-text-black pb-5">
+        <p class="is-size-5 has-text-black">
           During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
         </p> 
         <article class="message is-dark">
@@ -97,9 +97,6 @@
         </article>
         <p class="is-size-5 has-text-black pb-5">
           <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, <strong> the spontaneous knowledge sharing that happens in an office.</strong>
-        </p>
-        <p class="is-size-5 has-text-black pb-5">
-          <strong>Goal:</strong> make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
         </p>
         <p class="is-size-5 has-text-black">
           A tech lead at a 200-person startup captured it perfectly:
@@ -116,6 +113,9 @@
           <li>Teams spent too much time coordinating across time zones</li>
           <li>The spontaneous "tap on the shoulder" for help was gone</li>
         </ul>
+        <p class="is-size-5 has-text-black pb-5">
+          <strong>Goal:</strong> make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
+        </p>
       </div>
     </div>
   </section>
