--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -96,7 +96,7 @@
           </div>
         </article>
         <p class="is-size-5 has-text-black pb-5">
-          <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, <strong> the spontaneous knowledge sharing that happens in an office.</strong>
+          <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, the spontaneous knowledge sharing that happens in an office.
         </p>
         <p class="is-size-5 has-text-black">
           A tech lead at a 200-person startup captured it perfectly:
