--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -87,7 +87,7 @@
         <p class="is-size-5 has-text-black">
           During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
         </p> 
-        <article class="message is-dark">
+        <article class="message is-dark pb-5">
           <div class="message-body">
             <strong>Timeline:</strong> 6 weeks </br>
             <strong>Team:</strong> 1 developer, 1 product designer</br>
@@ -99,15 +99,9 @@
           <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, the spontaneous knowledge sharing that happens in an office.
         </p>
         <p class="is-size-5 has-text-black">
-          A tech lead at a 200-person startup captured it perfectly:
-        </p>
-        <blockquote>
-          "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work."
-        </blockquote>
-        <p class="is-size-5 has-text-black">
           Through early conversations with teams, we identified several critical issues:
         </p>
-        <ul>
+        <ul style="pb-5">
           <li>Knowledge was becoming siloed in individual team members</li>
           <li>Junior developers were missing key learning opportunities</li>
           <li>Teams spent too much time coordinating across time zones</li>
